# Cybersecurity-AI-Agents

./: README.md  crew.py  main.py  test.py  zap_report.html
crewai_project/: DirBuster-Report-gazijarin.com-80.txt  README.md  dirbuster_report.txt  dnsrecon_report.txt  nmap_report.txt  pyproject-old.toml  pyproject.toml  report.md  report.txt  report_html.html  sqlmap_report.txt  ssl_report.txt  sublist3r_report.txt  toDo.txt  training_data.pkl  wafw00f_report.txt  whois_report.txt  zap_report.html
crewai_project/Bruteforcing-Model/password-cracking-optimization/: README.md  requirements.txt
crewai_project/Bruteforcing-Model/password-cracking-optimization/data/processed/: passwords.csv
crewai_project/Bruteforcing-Model/password-cracking-optimization/models/gan/: discriminator.py  generator.py
crewai_project/Bruteforcing-Model/password-cracking-optimization/notebooks/: data_exploration.ipynb  model_training.ipynb
crewai_project/Bruteforcing-Model/password-cracking-optimization/src/: data_preprocessing.py  integrate_hashcat.py  integrate_john.py  train_gan.py  train_markov_model.py
crewai_project/Bruteforcing-Model/password-cracking-optimization/src/utils/: helpers.py
crewai_project/MyModel/: test_rockyou.txt
crewai_project/src/crewai_project/: SSL-Scanner_test.py  crew.py  dirbuster_test.py  generate_report_test.py  main.py  metsploit_test.py  nmap_test_BD.py  owasp_test.py  pentest_report_template.html  scrapy_test.py  scrapy_tobedeleted.py  sqlmap_test.py  telg_test.py
crewai_project/src/crewai_project/config/: agents.yaml  tasks.yaml
