[project]
name = "crewai_project"
version = "0.1.0"
description = "crewAI_Project using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
crewai_project = "crewai_project.main:run"
run_crew = "crewai_project.main:run"
train = "crewai_project.main:train"
replay = "crewai_project.main:replay"
test = "crewai_project.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
